--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emoji Search</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Emoji Search</h1>
-    <input type="text" id="search"/>
-    <button id="btn-search">Search</button>
+    <div class="search-container">
+        <input type="text" id="search"/>
+        <button id="btn-search">Search</button>
+    </div>
     <div class="results">
 
     </div>
     
-    <script src="/src/index.js"></script>
+    <script type="module" src="/src/index.js"></script>
 </body>
 </html>
