--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emoji Search</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script src="index.js" type="module"></script>
+  </head>
+  <body>
     <h1>Emoji Search</h1>
     <div class="search-container">
-        <input type="text" id="search"/>
-        <button id="btn-search">Search</button>
+      <input type="text" id="search" />
+      <button id="btn-search">Search</button>
     </div>
-    <div class="results">
-
-    </div>
-    
-    <script type="module" src="/src/index.js"></script>
-</body>
+    <div class="results"></div>
+  </body>
 </html>
